[package]
name = "blazeup"
version = "0.1.0"
authors = ["Anthony Mugendi <ngurumugz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell =  "1.7.2"
serde_json = "1.0"


[dependencies.sled]
version = "0.34"

[dependencies.kv]
version="0.22.0"
features = ["bincode-value"]

[dependencies.serde]
version = "^1"
features = ["derive"] 
