[package]
name = "blazeup"
version = "0.1.0"
authors = ["Anthony Mugendi <ngurumugz@gmail.com>"]
edition = "2021"
repository = "https://github.com/mugendi/blazeup"
documentation = "https://docs.rs/blazeup"
description = "Key value database that seeks to add more features to the basic get/set/remove methods"
readme = "README.md"
keywords = ["key-value-store", "database", "sled", "kv"]

[dependencies]
once_cell =  "1.7.2"
serde_json = "1.0"


[dependencies.sled]
version = "0.34"

[dependencies.kv]
version="0.22.0"
features = ["bincode-value"]

[dependencies.serde]
version = "^1"
features = ["derive"] 
